# icu

./: .travis.yml  CMakeLists.txt  appveyor.yml
cmake/template/: Config.cmake.in
source/common/: CMakeLists.txt  putil.cpp  putilimp.h  uinit.cpp  uloc_tag.c  umapfile.c
source/data/: CMakeLists.txt  icupkg.cmake.in
source/data/cmake/host/: CMakeLists.txt
source/i18n/: CMakeLists.txt  windtfmt.cpp  windtfmt.h  winnmfmt.cpp  winnmfmt.h
source/io/: CMakeLists.txt
source/layout/: CMakeLists.txt
source/layoutex/: CMakeLists.txt
source/stubdata/: CMakeLists.txt
source/tools/: CMakeLists.txt
source/tools/genbrk/: CMakeLists.txt
source/tools/genccode/: CMakeLists.txt
source/tools/gencfu/: CMakeLists.txt
source/tools/gencmn/: CMakeLists.txt
source/tools/gencnval/: CMakeLists.txt
source/tools/gendict/: CMakeLists.txt
source/tools/gennorm2/: CMakeLists.txt
source/tools/genrb/: CMakeLists.txt
source/tools/gensprep/: CMakeLists.txt
source/tools/icuinfo/: CMakeLists.txt
source/tools/icupkg/: CMakeLists.txt
source/tools/makeconv/: CMakeLists.txt
source/tools/pkgdata/: CMakeLists.txt
source/tools/toolutil/: CMakeLists.txt
