add_library(
    icuuc
    appendable.cpp
    bmpset.cpp
    bmpset.h
    brkeng.cpp
    brkeng.h
    brkiter.cpp
    bytestream.cpp
    bytestrie.cpp
    bytestriebuilder.cpp
    bytestrieiterator.cpp
    caniter.cpp
    chariter.cpp
    charstr.cpp
    charstr.h
    cmemory.c
    cmemory.h
    cpputils.h
    cstring.c
    cstring.h
    cwchar.c
    cwchar.h
    dictbe.cpp
    dictbe.h
    dictionarydata.cpp
    dtintrv.cpp
    errorcode.cpp
    filterednormalizer2.cpp
    hash.h
    icudataver.c
    icuplug.cpp
    icuplugimp.h
    listformatter.cpp
    loadednormalizer2impl.cpp
    localsvc.h
    locavailable.cpp
    locbased.cpp
    locbased.h
    locdispnames.cpp
    locid.cpp
    loclikely.cpp
    locmap.c
    locmap.h
    locresdata.cpp
    locutil.cpp
    locutil.h
    messagepattern.cpp
    msvcres.h
    mutex.h
    normalizer2.cpp
    normalizer2impl.cpp
    normalizer2impl.h
    normlzr.cpp
    parsepos.cpp
    patternprops.cpp
    propname.cpp
    propname.h
    propsvec.c
    propsvec.h
    punycode.cpp
    punycode.h
    putil.cpp
    putilimp.h
    rbbi.cpp
    rbbidata.cpp
    rbbidata.h
    rbbinode.cpp
    rbbinode.h
    rbbirb.cpp
    rbbirb.h
    rbbirpt.h
    rbbiscan.cpp
    rbbiscan.h
    rbbisetb.cpp
    rbbisetb.h
    rbbistbl.cpp
    rbbitblb.cpp
    rbbitblb.h
    resbund.cpp
    resbund_cnv.cpp
    ruleiter.cpp
    ruleiter.h
    schriter.cpp
    serv.cpp
    serv.h
    servlk.cpp
    servlkf.cpp
    servloc.h
    servls.cpp
    servnotf.cpp
    servnotf.h
    servrbf.cpp
    servslkf.cpp
    sharedobject.cpp
    simplepatternformatter.cpp
    sprpimpl.h
    stringpiece.cpp
    stringtriebuilder.cpp
    uarrsort.c
    uarrsort.h
    uassert.h
    ubidi.c
    ubidi_props.c
    ubidi_props.h
    ubidiimp.h
    ubidiln.c
    ubidiwrt.c
    ubrk.cpp
    ubrkimpl.h
    ucase.cpp
    ucase.h
    ucasemap.cpp
    ucasemap_titlecase_brkiter.cpp
    ucat.c
    uchar.c
    ucharstrie.cpp
    ucharstriebuilder.cpp
    ucharstrieiterator.cpp
    uchriter.cpp
    ucln.h
    ucln_cmn.cpp
    ucln_cmn.h
    ucln_imp.h
    ucmndata.c
    ucmndata.h
    ucnv.c
    ucnv2022.cpp
    ucnv_bld.cpp
    ucnv_bld.h
    ucnv_cb.c
    ucnv_cnv.c
    ucnv_cnv.h
    ucnv_ct.c
    ucnv_err.c
    ucnv_ext.cpp
    ucnv_ext.h
    ucnv_imp.h
    ucnv_io.cpp
    ucnv_io.h
    ucnv_lmb.c
    ucnv_set.c
    ucnv_u16.c
    ucnv_u32.c
    ucnv_u7.c
    ucnv_u8.c
    ucnvbocu.cpp
    ucnvdisp.c
    ucnvhz.c
    ucnvisci.c
    ucnvlat1.c
    ucnvmbcs.cpp
    ucnvmbcs.h
    ucnvscsu.c
    ucnvsel.cpp
    ucol_swp.cpp
    ucol_swp.h
    udata.cpp
    udatamem.c
    udatamem.h
    udataswp.c
    udataswp.h
    uenum.c
    uenumimp.h
    uhash.c
    uhash.h
    uhash_us.cpp
    uidna.cpp
    uinit.cpp
    uinvchar.c
    uinvchar.h
    uiter.cpp
    ulist.c
    ulist.h
    ulistformatter.cpp
    uloc.cpp
    uloc_keytype.cpp
    uloc_tag.c
    ulocimp.h
    umapfile.c
    umapfile.h
    umath.c
    umutex.cpp
    umutex.h
    unames.cpp
    unifiedcache.cpp
    unifilt.cpp
    unifunct.cpp
    uniset.cpp
    uniset_closure.cpp
    uniset_props.cpp
    unisetspan.cpp
    unisetspan.h
    unistr.cpp
    unistr_case.cpp
    unistr_case_locale.cpp
    unistr_cnv.cpp
    unistr_props.cpp
    unistr_titlecase_brkiter.cpp
    unorm.cpp
    unormcmp.cpp
    unormimp.h
    uobject.cpp
    uprops.cpp
    uprops.h
    ures_cnv.c
    uresbund.cpp
    uresdata.c
    uresdata.h
    uresimp.h
    ureslocs.h
    usc_impl.c
    usc_impl.h
    uscript.c
    uscript_props.cpp
    uset.cpp
    uset_imp.h
    uset_props.cpp
    usetiter.cpp
    ushape.cpp
    usprep.cpp
    ustack.cpp
    ustr_cnv.cpp
    ustr_cnv.h
    ustr_imp.h
    ustr_titlecase_brkiter.cpp
    ustr_wcs.cpp
    ustrcase.cpp
    ustrcase_locale.cpp
    ustrenum.cpp
    ustrenum.h
    ustrfmt.c
    ustrfmt.h
    ustring.cpp
    ustrtrns.cpp
    utext.cpp
    utf_impl.c
    util.cpp
    util.h
    util_props.cpp
    utrace.c
    utracimp.h
    utrie.cpp
    utrie.h
    utrie2.cpp
    utrie2.h
    utrie2_builder.cpp
    utrie2_impl.h
    uts46.cpp
    utypes.c
    uvector.cpp
    uvector.h
    uvectr32.cpp
    uvectr32.h
    uvectr64.cpp
    uvectr64.h
    wintz.c
    wintz.h
)

target_compile_definitions(icuuc PRIVATE U_COMMON_IMPLEMENTATION)

target_compile_definitions(
    icuuc
    PUBLIC
    UNISTR_FROM_CHAR_EXPLICIT=explicit
    UNISTR_FROM_STRING_EXPLICIT=explicit
    U_NO_DEFAULT_INCLUDE_UTF_HEADERS=1
    U_HAVE_ATOMIC=1
)

target_link_libraries(icuuc PUBLIC ${CMAKE_DL_LIBS})

if(ICU_DATA_ARCHIVE_MODE)
  target_link_libraries(icuuc PUBLIC icustubdata)
else()
  # INSTALL_INTERFACE introduced to avoid cyclic dependency:
  # * icupkg -> icuuc -> icudata -> icupkg (generated by)
  # Build:
  # * icudata -> icupkg -> icuuc -> icustubdata
  # Usage:
  # * icuuc -> icudata
  target_link_libraries(icuuc PUBLIC $<BUILD_INTERFACE:icustubdata>)
  target_link_libraries(icuuc PUBLIC $<INSTALL_INTERFACE:icudata>)
endif()

target_compile_definitions(icuuc PUBLIC U_USING_ICU_NAMESPACE=0)

if(NOT BUILD_SHARED_LIBS)
  target_compile_definitions(icuuc PUBLIC U_STATIC_IMPLEMENTATION)
endif()

target_include_directories(
    icuuc
    PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
)

install(
    DIRECTORY unicode
    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
    FILES_MATCHING
    PATTERN "*.h"
)

install(
    TARGETS icuuc
    EXPORT "${TARGETS_EXPORT_NAME}"
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
)

set_target_properties(icuuc PROPERTIES EXPORT_NAME uc)
