add_subdirectory(genbrk)
add_subdirectory(genccode)
add_subdirectory(gencfu)
add_subdirectory(gencmn)
add_subdirectory(gencnval)
add_subdirectory(gendict)
add_subdirectory(gennorm2)
add_subdirectory(genrb)
add_subdirectory(gensprep)
add_subdirectory(icuinfo)
add_subdirectory(icupkg)
add_subdirectory(makeconv)
add_subdirectory(toolutil) # before pkgdata
add_subdirectory(pkgdata)
